KonaAI.Master/kubernetes-manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: ingress-nginx
  labels:
    app: api-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: api-container
        image: us-central1-docker.pkg.dev/konaai-dev-462909/konaai-gke/api:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "70m"
          limits:
            memory: "128Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ingress-nginx
spec:
  selector:
    app: api-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
